# multi-gee

./: AUTHORS  BUILD  ChangeLog  LICENSE  Makefile.am  README  autobuild  build.mk  configure.ac  doxygen.conf.in  multi-gee.h  multi-gee.m4  multi-gee.spec.in
config/: autogen.sh  bootstrap  clobber
doc/: Makefile  README  api.tex  api.txt  classdef.txt  design.txt  image-capture-design.txt  image-capture-mechanism.txt  integration.txt  layout.txt  mechanism.txt  sllist-tests.txt  video-capture-api.txt
doc/doxy/: doxygen.conf.in
example/: Makefile.am  check-rate.c  mg-tweak.c  multi-gee.c  pgm_util.c  pgm_util.h  process_util.c  process_util.h
examples/: check-rate.c  device.c  device.h  mg-tweak.c  multi-gee.c  pgm_util.c  pgm_util.h  process_util.c  process_util.h  sllist.c  sync-check.c  sync-grammar.y  sync-scanner.l
m4/: Makefile.am  multi-gee.m4
multi-gee/: Makefile.am  capture.c  check-rate.c  classdef.h  debug_xassert.c  debug_xassert.h  dvideo.c  fg_util.c  fg_util.h  log.c  log.h  mg_buffer.c  mg_buffer.h  mg_device.c  mg_device.h  mg_frame.c  mg_frame.h  multi-gee.c  multi-gee.h  redirect.h  sllist.c  sllist.h  sync-stream.c  test-runner.c  test-runner.h  test_mg.c  test_sllist.c  trace.h  tv_util.c  tv_util.h  verbose-argp.c  verbose-argp.h  xmalloc.c  xmalloc.h
src/: Makefile.am  capture.c  classdef.h  debug_xassert.c  debug_xassert.h  dvideo.c  fg_util.c  fg_util.h  log.h  mg_buffer.c  mg_buffer.h  mg_device.c  mg_device.h  mg_frame.c  mg_frame.h  multi-gee.c  multi-gee.h  sllist.c  sllist.h  sync-stream.c  test_mg.c  test_sllist.c  tv_util.c  xmalloc.c  xmalloc.h
tests/: Makefile.am  sllist.c
