## $Id: Makefile.am 127 2007-02-22 08:44:57Z dsm $
## Copyright (C) 2005, 2006, 2007 Deneys S. Maartens <dsm@tlabs.ac.za>

## Process this file with automake to produce Makefile.in.

DIST_SUBDIRS =

all check clean doc:
	@cd $(top_builddir) && $(MAKE) $(MFLAGS) $@

MAINTAINERCLEANFILES = \
    Makefile.in

## -fin-
